syntax = "proto3";

package fileproto;

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "/;fileproto";

message File {
  bytes file_data = 1;
  string file_name = 2;
  string content_type = 3;
}

message UploadFileRequest {
  File file = 1;
}

message UploadFileResponse {
  string file_path = 1;
}

message DeleteFileRequest {
  string file_path = 1;
}

message DeleteFileResponse {}


service FilesService {
  rpc UploadFiles(UploadFileRequest) returns (UploadFileResponse);
  rpc DeleteFiles(DeleteFileRequest) returns (DeleteFileResponse);
}